Creating create and list products documentation
